# ComfyUI-AudioSuiteAdvanced

./: .gitignore  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt  test_import.py  test_nodes.py
example_workflows/: README.md  TTS_with_long_text_files.json  TTS_with_subtitle_files.json  audio_separation_example.json  basic_workflow.json
example_workflows/input/: example.txt
nodes/: __init__.py  audio_nodes.py  batch_nodes.py  character_nodes.py  subtitle_nodes.py  text_nodes.py
