[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ComfyUI-AudioSuiteAdvanced"
description = "用于处理长文本文件并生成语音的ComfyUI插件，支持音频分离、文本分割、音频拼接等功能"
version = "1.0.5"
license = { file = "LICENSE.txt" }
dependencies = [] # Filled in from requirements.txt
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/whmc76/ComfyUI-AudioSuiteAdvanced"

[tool.comfy]
PublisherId = "whmc76"
DisplayName = "AudioSuiteAdvanced"
Icon = "https://raw.githubusercontent.com/whmc76/ComfyUI-AudioSuiteAdvanced/main/icon.png" 